# a-brick-translator

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt
brick_translator/: __init__.py  cli.py  config_manager.py  i18n_generator.py  translator.py
examples/: basic.py  i18n_example.json  i18n_example.py  sample_input.json
tests/: api_check.py  test_i18n_generator.py  test_translator.py
